--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/fantasticMrFox/list-diff",
   "devDependencies": {
-    "chai": "^2.2.0"
+    "chai": "^2.2.0",
+    "colors": "^1.0.3"
   }
 }
