--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "istanbul cover _mocha"
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/fantasticMrFox/list-diff",
   "devDependencies": {
     "chai": "^2.2.0",
-    "colors": "^1.0.3"
+    "colors": "^1.0.3",
+    "istanbul": "^0.3.13",
+    "mocha": "^2.2.4"
   }
 }
