--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "array-difference",
-  "version": "0.1.13",
-  "description": "Calculates difference between two arrays.",
+  "name": "f-xyz-list-difference",
+  "version": "0.1.16",
+  "description": "Difference between two arrays.",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -11,26 +11,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fantasticMrFox/list-diff.git"
+    "url": "https://github.com/f-xyz/list-difference"
   },
   "keywords": [
     "difference",
     "diff"
   ],
-  "author": "andr",
+  "author": "f-xyz",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/fantasticMrFox/list-diff/issues"
+    "url": "https://github.com/f-xyz/list-difference/issues"
   },
-  "homepage": "https://github.com/fantasticMrFox/list-diff",
+  "homepage": "https://github.com/f-xyz/list-difference",
   "devDependencies": {
-    "chai": "^2.2.0",
-    "colors": "^1.0.3",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.2.4",
     "browserify": "^10.2.4",
     "chai": "^3.0.0",
-    "coffee-script": "^1.9.3",
+    "chalk": "^1.0.0",
+    "colors": "^1.0.3",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-bump": "^0.3.1",
@@ -38,7 +35,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.2.0",
-    "istanbul": "^0.3.15",
+    "istanbul": "^0.3.13",
     "lodash": "^3.9.3",
     "mocha": "^2.2.5",
     "proxyquire": "^1.5.0",
